[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/Kamikadze.gd" type="Script" id=1]
[ext_resource path="res://sprites/Sprites/enemies/kamikadze/tnt.png" type="Texture" id=3]
[ext_resource path="res://sprites/Sprites/enemies/kamikadze/kamikadz2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Sprites/enemies/kamikadze/kamikadz1.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=15]
light_mode = 2

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 80.0

[sub_resource type="CircleShape2D" id=2]
radius = 192.167

[sub_resource type="CircleShape2D" id=3]
radius = 112.0

[sub_resource type="Animation" id=5]
resource_name = "run"
tracks/0/type = "value"
tracks/0/path = NodePath("kamikadz1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8.833 ), Vector2( 0, 7 ), Vector2( 0, 8.833 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("kamikadz2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -14.455 ), Vector2( 0, -12 ), Vector2( 0, -14.455 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("tnt:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.50908, -4.40779 ), Vector2( -0.509, -5 ), Vector2( -0.50908, -4.40779 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "spawn"

[sub_resource type="Animation" id=6]
resource_name = "spawn"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 0.217638, 0.233259 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Curve" id=9]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 184.959 ), 0.0, 0.0, 0, 0, Vector2( 1, -204.42 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.486034, 0.995261 )
colors = PoolColorArray( 0.916016, 0.243317, 0.511346, 1, 0.916016, 0.243317, 0.432514, 1, 0.908203, 0.742027, 0.266075, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 1 ), 0.0, 1.09806, 0, 0, Vector2( 1, 0 ), 0.0323995, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.2
damping = 1.0
angle_random = 1.0
angle_curve = SubResource( 10 )
scale = 10.0
scale_random = 0.2
scale_curve = SubResource( 12 )
color_ramp = SubResource( 7 )

[node name="Ukrainska_bimba" type="KinematicBody2D" groups=["enemies"]]
material = SubResource( 15 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -48.0 ],
"_edit_vertical_guides_": [ -160.0 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="Chill_zone" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chill_zone"]
shape = SubResource( 2 )

[node name="Kick_timer" type="Timer" parent="."]
wait_time = 0.75

[node name="visible_zone" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="visible_zone"]
polygon = PoolVector2Array( 0, 0, -32, 0, -80, -336, 80, -336, 32, 0 )

[node name="Polygon2D2" type="Polygon2D" parent="visible_zone"]
visible = false
scale = Vector2( 1.00278, 1 )
color = Color( 1, 0.984314, 0.894118, 0.0666667 )
polygon = PoolVector2Array( 0, 0, -32, 0, -80, -336, 80, -336, 32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="visible_zone"]
shape = SubResource( 3 )

[node name="kamikadz1" type="Sprite" parent="."]
position = Vector2( 0, 8.833 )
scale = Vector2( 10, 10 )
texture = ExtResource( 5 )
offset = Vector2( 0, 0.64 )

[node name="kamikadz2" type="Sprite" parent="."]
position = Vector2( 0, -14.455 )
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )
offset = Vector2( 0, -0.996 )

[node name="tnt" type="Sprite" parent="."]
position = Vector2( -0.50908, -4.40779 )
scale = Vector2( 3, 3 )
z_index = -1
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/run = SubResource( 5 )
anims/spawn = SubResource( 13 )
"anims/spawn 2" = SubResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
z_index = -2
emitting = false
amount = 150
lifetime = 0.8
one_shot = true
explosiveness = 0.1
process_material = SubResource( 8 )

[node name="Particle_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Chill_zone" to="." method="_on_Chill_zone_body_entered"]
[connection signal="body_exited" from="Chill_zone" to="." method="_on_Chill_zone_body_exited"]
[connection signal="timeout" from="Kick_timer" to="." method="_on_Kick_timer_timeout"]
[connection signal="body_entered" from="visible_zone" to="." method="_on_visible_zone_body_entered"]
[connection signal="body_exited" from="visible_zone" to="." method="_on_visible_zone_body_exited"]
[connection signal="timeout" from="Particle_timer" to="." method="_on_Particle_timer_timeout"]
